# MyLittlePetProjects

./: .gitignore  README.md
JavaScript_Calculator/: CalculatorScripts.js  CalculatorStyles.css  index.html
The_game_of_fifteen/: CMakeLists.txt  CMakePresets.json  Controller.cpp  Controller.hpp  EndGameMessage.cpp  EndGameMessage.hpp  GameView.cpp  GameView.hpp  MatrixModel.cpp  MatrixModel.hpp  main.cpp
Turing_Machine/: main.py
Vigenere_Chipher/: Vigenere_Chipher.sln
Vigenere_Chipher/Vigenere_Chipher/: Vigenere_Chipher.cpp  Vigenere_Chipher.vcxproj  Vigenere_Chipher.vcxproj.filters
